syntax = "proto3";

package message;


message OrderRequest {
    string OrderId = 1;
    int64 TimeStamp = 2;
}

message OrderInfo {
    string OrderId = 1;
    string OrderName = 2;
    string OrderStatus =3;
}

service OrderService{
    rpc GetOrderInfo(OrderRequest) returns (OrderInfo);
}